[package]
name = "atmos"
version = "0.0.1"
edition = "2024"
description = "light atproto-style merkle search tree impl."
license = "MIT OR Apache-2.0"

[[bin]]
name = "mistycar"
path = "src/main.rs"

[dependencies]
ipld-core = "0.4.2"
serde_ipld_dagcbor = "0.6.3"
serde_ipld_dagjson = "0.2"
multihash = "0.19"
cid = "0.11"
sha2 = "0.10"
iroh-car = "0.5"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
bytes = { version = "1.0", features = ["serde"] }
futures = "0.3"
dashmap = "6.1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Optional Fjall storage dependencies
fjall = { version = "2.0", optional = true }
lru = { version = "0.12", optional = true }
uuid = { version = "1.0", optional = true, features = ["v4"] }
bincode = { version = "1.3", optional = true }
tempfile = { version = "3.0", optional = true }

[features]
default = []
fjall = ["dep:fjall", "dep:lru", "dep:uuid", "dep:bincode", "dep:tempfile"]

[dev-dependencies]
env_logger = "0.10"
serde_json = "1.0"
